force-app/main/default/objects/Time__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>