force-app/main/default/objects/Time__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>