force-app/main/default/objects/Time__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <label>Task</label>
    <referenceTo>ProjectTask__c</referenceTo>
    <relationshipLabel>Time</relationshipLabel>
    <relationshipName>Time</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>